Fixing footer bug on mobile website

--- a/src/Components/Footer/style.css
+++ b/src/Components/Footer/style.css
@@ -74,6 +74,7 @@
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
+        padding: 0px;
     }
     .column-footer{
         text-align: center;
